k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: replate
  annotations:
    cert-manager.io/cluster-issuer: "replate-selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "68.210.88.133"
      secretName: replate-tls
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filter-ingress
  namespace: replate
  annotations:
    cert-manager.io/cluster-issuer: "replate-selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "68.210.88.133"
      secretName: replate-tls
  rules:
    - http:
        paths:
          - path: /locations
            pathType: Prefix
            backend:
              service:
                name: filter-service
                port:
                  number: 8083
          - path: /categories
            pathType: Prefix
            backend:
              service:
                name: filter-service
                port:
                  number: 8083

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listing-ingress
  namespace: replate
  annotations:
    cert-manager.io/cluster-issuer: "replate-selfsigned-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "68.210.88.133"
      secretName: replate-tls
  rules:
    - http:
        paths:
          - path: /listings
            pathType: Prefix
            backend:
              service:
                name: listing-service
                port:
                  number: 8082
